k8s/apps/alloy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy
  namespace: alloy
  labels:
    app: alloy
spec:
  type: ClusterIP
  selector:
    app: alloy
  ports:
    - name: http-metrics
      port: 12345
      targetPort: http-metrics
      protocol: TCP
